--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.19.2",
     "pug": "^3.0.2",
+    "socket.io": "^4.7.5",
     "ws": "^8.16.0"
   }
 }
